# QMIPPlatform

./: README.md
QOMIPPlatform/: CMakeLists.txt  CommonUtils.h  Qmlres.qrc  Reader.cpp  Reader.h  algorithmdialog.cpp  algorithmdialog.h  algorithmitemdelegate.cpp  algorithmitemdelegate.h  algorithmlistmodel.cpp  algorithmlistmodel.h  algorithmmanagerdialog.cpp  algorithmmanagerdialog.h  algorithmmanagerdialog.ui  algorithmselectiondialog.cpp  algorithmselectiondialog.h  basicviewwidget.cpp  basicviewwidget.h  basicviewwidget.ui  cameramanager.cpp  cameramanager.h  detachedwindow.cpp  detachedwindow.h  exportprogressdialog.cpp  exportprogressdialog.h  frameprocessor.cpp  frameprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourceextractor.cpp  resourceextractor.h  resources.qrc  videoexporter.cpp  videoexporter.h  worker.h
QOMIPPlatform/Algorithms/: CMakeLists.txt  adaptivethreshold.cpp  adaptivethreshold.h  algorithm.h  algorithmfactory.cpp  algorithmfactory.h  blurdetector.cpp  blurdetector.h  blurfilter.cpp  blurfilter.h  cannyedgedetector.cpp  cannyedgedetector.h  farnebackopticalflow.cpp  farnebackopticalflow.h  framedifferencedetector.cpp  framedifferencedetector.h  grayscalealgorithm.cpp  grayscalealgorithm.h  haarfacedetector.cpp  haarfacedetector.h  hogpedestriandetector.cpp  hogpedestriandetector.h  hsvcolorextraction.cpp  hsvcolorextraction.h  medianblur.cpp  medianblur.h  mog2backgroundsubtractor.cpp  mog2backgroundsubtractor.h  morphologicaloperation.cpp  morphologicaloperation.h  orbfeaturedetector.cpp  orbfeaturedetector.h  originalalgorithm.cpp  originalalgorithm.h  otsuthreshold.cpp  otsuthreshold.h  sobeledgedetector.cpp  sobeledgedetector.h  thresholdfilter.cpp  thresholdfilter.h
QOMIPPlatform/CustomerAlg/: CMakeLists.txt  aimodelprocessor.cpp  aimodelprocessor.h  airesultvisualizer.cpp  airesultvisualizer.h  algorithmimportdialog.cpp  algorithmimportdialog.h  mobilenetssdconfigdialog.cpp  mobilenetssdconfigdialog.h  mobilenetssdprocessor.cpp  mobilenetssdprocessor.h
QOMIPPlatform/Qml/: AlgorithmModelListView.qml  BooleanInputComponent.qml  DescriptionComponent.qml  ListViewDelegation.qml  NoParamsComponent.qml  NumberInputComponent.qml  ParameterEditDialog.qml  TextInputComponent.qml
